fix text wrap in annotations tooltip

--- a/src/theme/all.css
+++ b/src/theme/all.css
@@ -1,3 +1,6 @@
+.gxp-annotations-tip {
+    white-space: normal !important;
+}
 .x-tree-node-leaf  .gx-tree-layer-icon {
     background-image: url(img/geosilk/vector.png);
 }
